se sube index modificado

--- a/index.html
+++ b/index.html
@@ -5,10 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMCONECTA - LECTOR QR SM</title>
+    <link rel="icon" type="image/jpg" href="assets/img/favicon.ico" />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/estilos.css">
 </head>
 
 <body>
+    <div class="color-conecta">.</div>
+    <header class="d-flex align-items-center justify-content-between encabezado">
+        <div class="logo"></div>
+        <div class="logoQR">
+            <img class="logoQR_img me-5" src="assets/img/logo_LectorQR.png" alt="">
+            <h1 class="titulo">Lector QR SM</h1>
+        </div>
+    </header>
 
 </body>
 
