--- a/index.html
+++ b/index.html
@@ -1,24 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMCONECTA - LECTOR QR SM</title>
     <link rel="icon" type="image/jpg" href="assets/img/favicon.ico" />
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="color-conecta">.</div>
+    <div class="color-conecta"></div>
     <header class="d-flex align-items-center justify-content-between encabezado">
         <div class="logo"></div>
         <div class="logoQR">
-            <img class="logoQR_img me-5" src="assets/img/logo_LectorQR.png" alt="">
-            <h1 class="titulo">Lector QR SM</h1>
+            <img class="logoQR_img me-2" src="assets/img/logo_LectorQR.png" alt="">
+            <h1 class="titulo  ">Lector QR SM</h1>
         </div>
     </header>
+
+    <main class="mt-5">
+        <div class="container caja">
+
+            <div class="row p-3 m-0 ">
+                <div class="col-8">
+                    <div class="logoGrande mt-4">
+                        <img src="assets/img/logoGrande.png" alt="">
+                    </div>
+                    <p class="texto mt-4 ms-5 fs-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil,
+                        dolorem!
+                        Minima
+                        enim voluptatibus
+                        sequi maiores, repudiandae quidem ipsam excepturi, nobis itaque porro dolorum modi, fugiat
+                        ducimus possimus qui dicta laboriosam.</p>
+                </div>
+                <div class="col-3 mobiles">
+                    <img class="img_cel_1" src="assets/img/captura1.png" alt="">
+                    <img class="img_cel_2" src="assets/img/captura2.png" alt="">
+                </div>
+
+                <div class="row m-0 p-0 seccion_descarga">
+                    <div class="co-12 m-0 p-0">231</div>
+                </div>
+            </div>
+        </div>
+
+    </main>
+
+
 
 </body>
 
